[gd_scene load_steps=4 format=3 uid="uid://c8tq0ppoe2tb0"]

[ext_resource type="Script" path="res://scripts/towerPlatform.gd" id="1_2l6tq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2bija"]
radius = 109.018

[sub_resource type="CanvasTexture" id="CanvasTexture_yabk0"]

[node name="towerPlatform" type="Area2D"]
script = ExtResource("1_2l6tq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2bija")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 5.5)
scale = Vector2(100, 93)
texture = SubResource("CanvasTexture_yabk0")

[node name="TowerGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="TowerGUI"]
layout_mode = 0
offset_left = -104.0
offset_top = -124.0
offset_right = -7.0
offset_bottom = -57.0
text = "Chop Sticks"

[node name="Button2" type="Button" parent="TowerGUI"]
layout_mode = 2
offset_left = 18.0
offset_top = -81.0
offset_right = 117.0
offset_bottom = -5.0
text = "Soy Sauce"

[node name="Button3" type="Button" parent="TowerGUI"]
layout_mode = 2
offset_left = -107.0
offset_top = -7.0
offset_right = -9.0
offset_bottom = 67.0
text = "Ginger"

[node name="Button4" type="Button" parent="TowerGUI"]
layout_mode = 2
offset_left = 23.0
offset_top = 38.0
offset_right = 112.0
offset_bottom = 110.0
text = "Wasabi
"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
